--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   </nav>
   <section id="profile">
     <div class="section__pic-container">
-      <img src="./assets/profile-pic.png" alt="Kierrany Coleman profile picture" />
+      <img id="first-pic" src="./assets/profile-pic.png" alt="Kierrany Coleman profile picture" />
     </div>
     <div class="section__text">
       <p class="section__text__p1">Hello, I'm</p>
@@ -66,9 +66,6 @@
     <p class="section__text__p1">Get To Know More</p>
     <h1 class="title">About Me</h1>
     <div class="section-container">
-      <div class="section__pic-container">
-        <img src="./assets/about-pic.png" alt="Profile picture" class="about-pic" />
-      </div>
       <div class="about-details-container">
         <div class="about-containers">
           <div class="details-container">
