forgot to add link to portfolio to project card

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
               onclick="location.href='https://github.com/KierranyC/portfolio.git'">
               Github
             </button>
-            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">
+            <button class="btn btn-color-2 project-btn" onclick="location.href='https://kierranycoleman.netlify.app/'">
               Live Demo
             </button>
           </div>
