--- a/index.html
+++ b/index.html
@@ -8,11 +8,15 @@
   <title>Kierrany Coleman</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="mediaqueries.css" />
+  <link rel="icon" href="./assets/favicon.ico" type="image/x-icon" />
+  <link rel="icon" href="./assets/favicon.png" type="image/png" sizes="32x32" />
 </head>
 
 <body>
   <nav id="desktop-nav">
-    <div class="logo">Kierrany Coleman</div>
+    <div class="logo">
+      <img src="./assets/favicon.png" alt="Kierrany Coleman Logo" />
+    </div>
     <div>
       <ul class="nav-links">
         <li><a href="#about">About</a></li>
@@ -23,7 +27,9 @@
     </div>
   </nav>
   <nav id="hamburger-nav">
-    <div class="logo">Kierrany Coleman</div>
+    <div class="logo">
+      <img src="./assets/favicon.png" alt="Kierrany Coleman Logo" />
+    </div>
     <div class="hamburger-menu">
       <div class="hamburger-icon" onclick="toggleMenu()">
         <span></span>
