--- a/index.html
+++ b/index.html
@@ -208,6 +208,7 @@
             <img src="./assets/project-1.png" alt="Project 1" class="project-img" />
           </div>
           <h2 class="experience-sub-title project-title">Oilay</h2>
+          <p class="project-description">E-commerce platform that sells hair products.</p>
           <div class="btn-container">
             <button class="btn btn-color-2 project-btn"
               onclick="location.href='https://github.com/KierranyC/GraceShopper_cap'">
@@ -224,6 +225,7 @@
             <img src="./assets/project-2.png" alt="Project 2" class="project-img" />
           </div>
           <h2 class="experience-sub-title project-title">Stranger's Things</h2>
+          <p class="project-description">Craigslist clone where users can sell unwanted items.</p>
           <div class="btn-container">
             <button class="btn btn-color-2 project-btn"
               onclick="location.href='https://github.com/KierranyC/Strangers_Things.git'">
@@ -240,6 +242,7 @@
             <img src="./assets/project-3.png" alt="Project 3" class="project-img" />
           </div>
           <h2 class="experience-sub-title project-title">Page Trail</h2>
+          <p class="project-description">Web app that lets users track their reading progress.</p>
           <div class="btn-container">
             <button class="btn btn-color-2 project-btn"
               onclick="location.href='https://github.com/KierranyC/ReadingTracker.git'">
@@ -255,6 +258,7 @@
             <img src="./assets/project-4.png" alt="Project 4" class="project-img" />
           </div>
           <h2 class="experience-sub-title project-title">Portfolio</h2>
+          <p class="project-description">Software engineering portfolio that showcases my skills.</p>
           <div class="btn-container">
             <button class="btn btn-color-2 project-btn"
               onclick="location.href='https://github.com/KierranyC/portfolio.git'">
@@ -270,6 +274,7 @@
             <img src="./assets/project-5.png" alt="Project 5" class="project-img" />
           </div>
           <h2 class="experience-sub-title project-title">Fitness Tracker</h2>
+          <p class="project-description">Front-end web application that lets users track workout routines.</p>
           <div class="btn-container">
             <button class="btn btn-color-2 project-btn"
               onclick="location.href='https://github.com/KierranyC/FitnessTrackr_FrontEnd'">
