--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
             <img src="./assets/project-1.png" alt="Project 1" class="project-img" />
           </div>
           <h2 class="experience-sub-title project-title">Oilay</h2>
-          <p class="project-description">E-commerce platform that sells hair products.</p>
+          <p class="project-description">Full-stack e-commerce platform for selling hair products.</p>
           <div class="btn-container">
             <button class="btn btn-color-2 project-btn"
               onclick="location.href='https://github.com/KierranyC/GraceShopper_cap'">
@@ -225,7 +225,7 @@
             <img src="./assets/project-2.png" alt="Project 2" class="project-img" />
           </div>
           <h2 class="experience-sub-title project-title">Stranger's Things</h2>
-          <p class="project-description">Craigslist clone where users can sell unwanted items.</p>
+          <p class="project-description">Front-end Craigslist clone where users can sell unwanted items.</p>
           <div class="btn-container">
             <button class="btn btn-color-2 project-btn"
               onclick="location.href='https://github.com/KierranyC/Strangers_Things.git'">
@@ -242,7 +242,7 @@
             <img src="./assets/project-3.png" alt="Project 3" class="project-img" />
           </div>
           <h2 class="experience-sub-title project-title">Page Trail</h2>
-          <p class="project-description">Web app that lets users track their reading progress.</p>
+          <p class="project-description">Full-stack app that lets users track their reading progress.</p>
           <div class="btn-container">
             <button class="btn btn-color-2 project-btn"
               onclick="location.href='https://github.com/KierranyC/ReadingTracker.git'">
@@ -274,7 +274,7 @@
             <img src="./assets/project-5.png" alt="Project 5" class="project-img" />
           </div>
           <h2 class="experience-sub-title project-title">Fitness Tracker</h2>
-          <p class="project-description">Front-end web application that lets users track workout routines.</p>
+          <p class="project-description">Front-end web application that tracks workout routines.</p>
           <div class="btn-container">
             <button class="btn btn-color-2 project-btn"
               onclick="location.href='https://github.com/KierranyC/FitnessTrackr_FrontEnd'">
