--- a/index.html
+++ b/index.html
@@ -152,6 +152,13 @@
                 <p>Basic</p>
               </div>
             </article>
+            <article>
+              <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
+              <div>
+                <h3>Next JS</h3>
+                <p>Basic</p>
+              </div>
+            </article>
           </div>
         </div>
         <div class="details-container">
@@ -282,6 +289,22 @@
             </button>
             <button class="btn btn-color-2 project-btn"
               onclick="location.href='https://fitnesstrackerforyou.netlify.app/'">
+              Live Demo
+            </button>
+          </div>
+        </div>
+        <div class="details-container color-container">
+          <div class="article-container">
+            <img src="./assets/project-6.png" alt="Project 6" class="project-img" />
+          </div>
+          <h2 class="experience-sub-title project-title">Todo</h2>
+          <p class="project-description">Simple todo list application.</p>
+          <div class="btn-container">
+            <button class="btn btn-color-2 project-btn"
+              onclick="location.href='https://github.com/KierranyC/TodoListApp'">
+              Github
+            </button>
+            <button class="btn btn-color-2 project-btn" onclick="location.href='https://simpletodoforyou.netlify.app/'">
               Live Demo
             </button>
           </div>
